--- a/html_build/pages/imageup/imageup.css
+++ b/html_build/pages/imageup/imageup.css
@@ -103,7 +103,7 @@
     width: 90%;
 }
 #imgUploadModal {
-    top:5% !important;
+    top:5%;
     max-height: 85%;
     height: 85%;
     overflow-y: auto;
