--- a/html_build/pages/signup/templates/registration_landing.html
+++ b/html_build/pages/signup/templates/registration_landing.html
@@ -22,7 +22,7 @@
 					</div>
 					<input type="text" name="lastname" placeholder="Last name" />
 					<input type="text" name="email" placeholder="Email" />
-					<% if(fb_invite != undefined){ %><input type="hidden" name="fb_invite_id" value="<%= fb_invite %>" /><% } %>
+					<% if(invite_hash != undefined){ %><input type="hidden" name="fb_invite_id" value="<%= invite_hash %>" /><% } %>
 					<div class = "signupsubmit">
 
 						<input type="submit" name="create" value="Sign Up" class="regsubmit" />
