--- a/html/pages/team/templates/layout.html
+++ b/html/pages/team/templates/layout.html
@@ -1,6 +1,9 @@
 <div class="template-container team-template-outer">
 <div id="main-header"></div>
 
+<div id="team-image-container" class="team-image-container">
+	<ul id="team-image-container-ul"></ul>
+</div>
 <div id="menu-container"></div>
 
 <div class="green-left-heading">MESSAGE BOARD</div>
