--- a/html/css/app.css
+++ b/html/css/app.css
@@ -2288,6 +2288,29 @@ li.sport .teamlist-header, .stat-val-outer {
 	display: none;
 }
 
+.team-template-outer #menu-container #sports-info {
+	float: left;
+	width: 100%;
+	height: 250px;
+}
+
+.team-template-outer #menu-container {
+	float: right;
+	width: 50%;
+	height: 300px;
+}
+
+.team-template-outer #menu-container .drop-down-main-outer {
+	width: 83%;
+	height: 50px;
+}
+
+.team-image-container {
+	float: left;
+	width: 50%;
+	height: 300px;
+}
+
 /* Dotted area css ends  */
 
 /*  Mobile css    */
