--- a/html/css/app.css
+++ b/html/css/app.css
@@ -2355,7 +2355,7 @@ li.sport .teamlist-header, .stat-val-outer {
 		margin-left: 35px;
 	}
 
-	.add-big-list-container, .pointer {
+	.pointer {
 		display: none;
 	}
 
@@ -2375,22 +2375,22 @@ li.sport .teamlist-header, .stat-val-outer {
 		width: 60%;
 		padding: 0;
 		padding-left: 11px;
-		white-space:nowrap; 
-		text-overflow:ellipsis;
+		white-space: nowrap;
+		text-overflow: ellipsis;
 		overflow: hidden;
 	}
-	
+
 	/*.template-container > div {
-		margin-bottom: 15px;
-	}*/
-	
+	 margin-bottom: 15px;
+	 }*/
+
 	#main {
 		overflow: hidden;
 		padding-top: 0px;
 		margin: 0;
 		background: #FFF;
 	}
-	
+
 	.modal {
 		width: 96% !important;
 		padding: 2% !important;
@@ -2402,7 +2402,7 @@ li.sport .teamlist-header, .stat-val-outer {
 		right: 0 !important;
 		border: none !important;
 	}
-	
+
 	#search-area input {
 		width: 210px;
 	}
@@ -2410,153 +2410,152 @@ li.sport .teamlist-header, .stat-val-outer {
 		position: relative;
 		top: 42px;
 	}
-	
+
 	.profile-pic-outer {
 		margin: 0;
 	}
-	
+
 	.profile-heading {
 		position: relative;
 		min-height: 200px;
 	}
-	
+
 	.profile-heading .sports-h {
 		position: absolute;
 		bottom: 10px;
 	}
-	
-	
+
 	.profile-heading h3 {
 		position: absolute;
 		top: 0;
 		font-size: 35px;
 	}
-	
+
 	.profile-heading h4 {
 		position: absolute;
 		top: 35px;
 	}
-	
+
 	#main-header .profile-pic-outer ul.image-outer-h li.image {
-		margin: 0; padding: 0;
+		margin: 0;
+		padding: 0;
 	}
-	
+
 	#main-header .profile-pic-outer ul.image-outer-h {
 		margin-bottom: 0px;
 	}
-	
+
 	.profile-pic-outer .image-item-container {
 		width: 319px;
 		height: 270px;
 	}
-	
+
 	.profile-pic-outer div.image-item-container > img {
 		min-width: 319px;
 		min-height: 270px;
 	}
-	
+
 	.profile-pic-outer .teams, .profile-info, .profile-pic-outer .border-right div.span6, .question {
 		display: none;
 	}
-	
+
 	.stats-panel {
 		width: 100% !important;
 	}
-	
+
 	.green-left-heading {
 		width: 100%;
 		text-align: left;
 	}
-	
+
 	.profile-comment-list-box #comment-list {
 		margin: 0 0 0 10px;
 	}
-	
+
 	.bubble .content p.comment-text {
 		padding: 5px 10px 5px 54px;
 	}
-	
+
 	.poster-info {
 		float: left;
 		padding-left: 11px;
 	}
-	
+
 	#image-wrap div.image-item-container {
 		width: 150px;
 		height: 140px;
 	}
-	
+
 	#image-wrap ul li.image {
 		min-height: 142px;
 		padding: 0;
 		margin: 0;
 		padding-right: 5px;
 	}
-	
+
 	#image-wrap ul.image-list {
 		margin-left: 5px;
 	}
-	
+
 	#image-wrap div.image-item-container > img {
 		min-width: 146px;
 		min-height: 220px;
 	}
-	
+
 	#image-wrap .circle {
 		width: 62px;
 		height: 74px;
 		margin: -132px 30px 30px 30px;
 	}
-	
+
 	.add-image {
 		background-position: 0 0;
 		margin-left: 5px;
 	}
-	
+
 	.add-icon {
 		background: url(images/icons/mobile/add-icons.png) no-repeat;
 		width: 150px;
 		height: 45px;
 	}
-	
+
 	.add-video {
 		background-position: -1px -55px;
 	}
-	
+
 	.team-label {
 		margin: 0 !important;
 		background: #e0e0e0;
 	}
-	
+
 	#schedule-list {
 		margin-left: 5px;
 	}
-	
+
 	.select-team {
-		position: relative;	
-		float: left;	
+		position: relative;
+		float: left;
 	}
-	
+
 	.game-box-outer {
 		background: #FFF;
 		border-radius: 0;
 		padding: 0;
 		margin: 0;
 	}
-	
+
 	.game-box-outer ul, .game-box-outer a {
 		background: #FFF;
 		border-radius: 0;
 		pointer-events: none;
 		height: auto;
-
 	}
-	
+
 	.game-box-outer a {
 		top: 65px;
-		left: -10px;		
+		left: -10px;
 	}
-	
+
 	.game-box-outer div.game-info {
 		display: block !important;
 		box-shadow: none;
@@ -2564,121 +2563,116 @@ li.sport .teamlist-header, .stat-val-outer {
 		float: right;
 		width: 84%;
 	}
-	
+
 	.game-box-outer li {
 		float: left;
 		border-bottom: 1px solid #ccc;
 		/*position: static;*/
 	}
-	
+
 	/*#schedule-list .right-with-icon {
-		position: absolute;
-		bottom: -24px;
-	}*/
-	
-	
-/* FANS CSS AREA  */
-	
+	 position: absolute;
+	 bottom: -24px;
+	 }*/
+
+	/* FANS CSS AREA  */
+
 	#fans-div div.image-item-container {
 		width: 150px;
 		height: 140px;
 	}
-	
+
 	#fans-div ul li.image {
 		min-height: 142px;
 		padding: 0;
 		margin: 0;
 		padding-right: 5px;
 	}
-	
+
 	#fans-div ul.image-list {
 		margin-left: 5px;
 	}
-	
+
 	#fans-div div.image-item-container > img {
 		min-width: 146px;
 		min-height: 220px;
 	}
-	
+
 	#fans-div .circle {
 		width: 62px;
 		height: 74px;
 		margin: -132px 30px 30px 30px;
 	}
-	
+
 	.add-to-list {
 		background-position: 0 0;
 		margin-left: 5px;
 	}
-	
+
 	.add-to-list, .invite-from-fb {
 		background: url(images/icons/mobile/add-followers.png) no-repeat;
 		width: 150px;
 		height: 45px;
 	}
-	
+
 	.invite-from-fb {
 		background-position: -1px -55px;
 	}
-	
-	
+
 	.mobile-link {
 		display: block !important;
 	}
-	
+
 	.desktop-link {
 		display: none !important;
 	}
-	
-	
+
 	.green-left-heading {
 		background-image: url(images/icons/mobile/right-arrow.png);
-		background-repeat:  no-repeat;
+		background-repeat: no-repeat;
 		cursor: pointer;
+		margin: 2px 0 0 0;
 	}
-	
+
 	.green-left-heading {
-		background-position: 80% 50%;
+		background-position: 80% 60%;
 	}
-	
+
 	.down-arrow-heading {
 		background-image: url(images/icons/mobile/down-arrow.png);
 	}
-	
-	#games_div, #fans-div, #commenton-wrap, #main-content, .buttons-h, #comment_div{
+
+	#games_div, #fans-div, #commenton-wrap, #main-content, .buttons-h, #comment_div {
 		display: none;
 	}
-	
+
 	.media-add-icons-h > div, .fans-add-icons-h > div {
 		width: 100%;
 	}
-	
+
 	.detail-view {
 		width: 100%;
 	}
-	
-	
-	
-	
+
 	.add-comment-h {
 		background-position: 0 0;
 		margin-left: 5px;
 		padding: 0;
 		color: #c6373b;
 	}
-	
+
 	.add-comment-h:hover, .add-comment-h:active {
 		color: #c6373b;
 	}
-	
+
 	.add-comment-h, .see-more-h {
 		background-image: url(images/icons/mobile/add-comment-icon.png);
-		background-repeat:  no-repeat;
+		background-repeat: no-repeat;
 		display: inline-block;
 		width: 150px;
 		height: 45px;
 	}
-	
+
 	.see-more-h {
 		float: none;
 		background-position: -1px -55px;
@@ -2686,40 +2680,40 @@ li.sport .teamlist-header, .stat-val-outer {
 		margin-left: 5px;
 		color: #1ba0af;
 	}
-	
+
 	.see-more-h:hover, .see-more-h:active {
-		color: #1ba0af;		
+		color: #1ba0af;
 	}
-	
+
 	#commenton-wrap .clear {
 		float: left;
 	}
-	
+
 	#comment_div {
 		margin-right: 5px;
 		float: right;
 		margin-top: -44px;
 	}
-	
+
 	#schedule-list a.add-game-h {
 		background-position: 0 0;
 		padding: 0;
 		color: #dc6425;
 		margin: 10px 8px 10px 0;
 	}
-	
+
 	#schedule-list a.add-game-h:hover, #schedule-list a.add-game-h:active {
 		color: #dc6425;
 	}
-	
+
 	#schedule-list a.add-game-h, #schedule-list .show-older {
 		background-image: url(images/icons/mobile/add-game-icon.png);
-		background-repeat:  no-repeat;
+		background-repeat: no-repeat;
 		display: inline-block;
 		width: 150px;
 		height: 45px;
 	}
-	
+
 	.show-older {
 		float: none;
 		background-position: -1px -55px;
@@ -2728,15 +2722,15 @@ li.sport .teamlist-header, .stat-val-outer {
 		margin-top: 6px;
 		color: #1ba0af;
 	}
-	
+
 	#main-content .see-more-h {
 		background-image: url(images/icons/mobile/media-show-more.png);
-		background-repeat:  no-repeat;
+		background-repeat: no-repeat;
 		display: inline-block;
 		width: 310px;
 		height: 45px;
 	}
-	
+
 	#main-content .see-more-h {
 		float: none;
 		background-position: 0 0;
@@ -2745,5 +2739,99 @@ li.sport .teamlist-header, .stat-val-outer {
 		margin-top: 6px;
 		color: #1ba0af;
 	}
+
+	.add-big-list-container .right-secton {
+		float: left;
+		width: 270px;
+	}
+
+	.add-big-list-container .border-wrapper {
+		min-height: 260px;
+	}
+
+	.add-big-list-container .left-text {
+		width: 270px;
+	}
+
+	.add-big-list-container .add-icon-large {
+		background-image: url(images/icons/mobile/mobile-media-add-icons.png);
+		background-repeat: no-repeat;
+		display: inline-block;
+		width: 110px;
+		height: 46px;
+	}
+	
+	.add-big-list-container {
+		margin: 10px 5px;
+	}
+
+	.add-big-list-container .right-secton > div {
+		margin-bottom: 10px;
+	}
+
+	.add-big-list-container .media .btn2 {
+		background-position: 0px -56px;
+	}
+	
+	.team-item .score-box {
+		margin-left: 10px;
+	}
+	
+	.roster-heading-h > div {
+		width: 100%;
+	}
+	
+	.roster-images-h {
+		display: none;
+	}
+	
+	#comment-list:empty {
+		float: left;
+		width: 100%;
+		height: 60px;
+	}
+	
+	
+	#roster-wrap div.image-item-container {
+		width: 150px;
+		height: 140px;
+	}
+
+	#roster-wrap ul li.image {
+		min-height: 142px;
+		padding: 0;
+		margin: 0;
+		padding-right: 5px;
+	}
+
+	#roster-wrap ul.image-list {
+		margin-left: 5px;
+	}
+
+	#roster-wrap div.image-item-container > img {
+		min-width: 146px;
+		min-height: 220px;
+	}
+
+	#roster-wrap .circle {
+		width: 62px;
+		height: 74px;
+		margin: -132px 30px 30px 30px;
+	}
+	
+	.roster-heading-h .add-icon {
+		margin-left: 5px;
+		margin-top: 5px;
+	}
+	
+	.roster-heading-h .invite-from-fb {
+		margin-left: 5px;
+	}
+	
+	.roster-images-h ul {
+		margin-left: 5px;
+	}
+
+
 }
 
