--- a/html_build/pages/signup/css/signupstyle.css
+++ b/html_build/pages/signup/css/signupstyle.css
@@ -84,7 +84,10 @@
     padding: 8px 5%;
     position: relative;
 }
-#modal-popup-signup #firstregbase input[type="text"]{
+#modal-popup-signup #firstregbase input[type="text"],
+#modal-popup-signup #firstregbase input[type="email"],
+#modal-popup-signup #firstregbase input[type="phone"],
+#modal-popup-signup #firstregbase input[type="password"]{
     background-color: #E4E4E4;
 }
 #modal-popup-signup .signupsubmit{
