--- a/html/packages/game-schedules/templates/schedule-item.html
+++ b/html/packages/game-schedules/templates/schedule-item.html
@@ -22,7 +22,7 @@
 			</ul>
 		</div>
 		
-		<a href="javascript: void(0);" title="show older" class="show-older show-older-h"></a>
+		<a href="javascript: void(0);" title="show older" class="show-older mobile-link show-older-h"></a>
 		<a href="javascript: void(0);" data-team-id="{{team_id}}" data-sport-id="0" title="add game" class="add-game-h mobile-link right-with-icon"></a>
 		
 	{{/teams}}
