some bugs with event binding and added styles

--- a/html/pages/fbinvite/templates/socialshare.html
+++ b/html/pages/fbinvite/templates/socialshare.html
@@ -1,28 +1,28 @@
-<ul class="image-actions large-menu">
-	<li class="share-on-h" data-share="facebook">
+<ul class="large-menu">
+	<li class="share-on-h " data-share="facebook">
 		<a href="javascript: void(0);">
-			<div class="icon"></div>
+			<div class="icon facebook-invite"></div>
 			<span class="option-title">Facebook</span>
 			<span class="option-desc">Send invites to an entire email list</span>
 		</a>
 	</li>
-	<li class="share-on-h" data-share="twitter">
+	<li class="share-on-h " data-share="twitter">
 		<a href="javascript: void(0);">
-			<div class="icon"></div>
+			<div class="icon social-twitter"></div>
 			<span class="option-title">Twitter</span>
 			<span class="option-desc">Send invites to an entire email list</span>
 		</a>
 	</li>
 	<li class="share-on-h" data-share="gplus">
 		<a href="javascript: void(0);" >
-			<div class="icon"></div>
+			<div class="icon social-gplus"></div>
 			<span class="option-title">Gooogle +</span>
 			<span class="option-desc">Send invites to an entire email list</span>
 		</a>
 	</li>
 	<li class="share-on-h" data-share="tumbler">
 		<a href="javascript: void(0);">
-			<div class="icon"></div>
+			<div class="icon social-tumbler"></div>
 			<span class="option-title">Tumblr</span>
 			<span class="option-desc">Send invites to an entire email list</span>
 		</a>
