--- a/html/pages/fbinvite/fbinvite.css
+++ b/html/pages/fbinvite/fbinvite.css
@@ -54,39 +54,68 @@
     width:100%;
 }
 #fbInvite ul.large-menu{
-    width:80%;
+    width:100%;
     margin: auto;
 }
 #fbInvite ul.large-menu li{
-    margin-top:15px;
-    padding:10px;
-    border:7px solid #dbdbdb;
-    height:80px;
+    margin: 5px;
+    padding: 10px;
+    border: 7px solid #dbdbdb;
+    height: 90px;
+    float: left;
+    width:80%;
+    max-width:450px;
 }
 
 #fbInvite ul.large-menu li div.icon{
-    max-width: 50px;
-    min-height: 50px;
-    width:10%;
+    width: 64px;
+    height: 64px;
     float: left;
-    border: 1px solid #333;
     margin-right:10px;
 }
 
-#fbInvite ul.large-menu li span
-{
-    padding:5px;
+#fbInvite ul.large-menu li div.icon.email-invite{
+    background-image: url('http://cdn.athletez.com/resources/img/social/20_sparow.png');
+}
+
+#fbInvite ul.large-menu li div.icon.facebook-invite{
+    background-image: url('http://cdn.athletez.com/resources/img/social/02_facebook.png');
+}
+
+#fbInvite ul.large-menu li div.icon.social-post-invite{
+    background-image: url('http://cdn.athletez.com/resources/img/social/open.png');
+}
+
+#fbInvite ul.large-menu li div.icon.social-twitter{
+    background-image: url('http://cdn.athletez.com/resources/img/social/01_twitter.png');
+}
+
+#fbInvite ul.large-menu li div.icon.facebook-invite{
+    background-image: url('http://cdn.athletez.com/resources/img/social/02_facebook.png');
+}
+
+#fbInvite ul.large-menu li div.icon.social-tumbler{
+    background-image: url('http://cdn.athletez.com/resources/img/social/15_tumblr.png');
+}
+
+#fbInvite ul.large-menu li div.icon.social-gplus{
+    background-image: url('http://cdn.athletez.com/resources/img/social/14_google.png');
+}
+
+#fbInvite ul.large-menu li span{
+    padding:0 5px 5px 5px;
 }
 #fbInvite ul.large-menu li span.option-title{
     float: left;
     font-weight: bold;
     font-size:1.2em;
-    width:85%;
+    width:55%;
 }
 
 #fbInvite ul.large-menu li span.option-desc{
     float: left;
     display:block;
+    max-width: 80%;
 }
 
 
