--- a/html/pages/fbinvite/templates/invitetypes.html
+++ b/html/pages/fbinvite/templates/invitetypes.html
@@ -2,21 +2,21 @@
 	<ul class="large-menu">
 		<li>
 			<a class="email-invite-h">
-				<div class="icon"></div>
+				<div class="icon email-invite"></div>
 				<span class="option-title">Email Invites</span>
 				<span class="option-desc">Send invites to an entire email list</span>
 			</a>
 		</li>
 		<li>
 			<a class="facebook-message-invite-h">
-				<div class="icon"></div>
+				<div class="icon facebook-invite"></div>
 				<span class="option-title">Facebook Friends</span>
 				<span class="option-desc">Send invitations to specific facebook friends.</span>
 			</a>
 		</li>
 		<li>
 			<a class="facebook-timeline-invite-h">
-				<div class="icon"></div>
+				<div class="icon social-post-invite"></div>
 				<span class="option-title">Open Invites</span>
 				<span class="option-desc">Post an open invitation that anybody can click on over facebook, twitter, google+, or tumblr.</span>
 			</a>
