--- a/html/pages/fbinvite/templates/socialshare.html
+++ b/html/pages/fbinvite/templates/socialshare.html
@@ -3,28 +3,28 @@
 		<a href="javascript: void(0);">
 			<div class="icon facebook-invite"></div>
 			<span class="option-title">Facebook</span>
-			<span class="option-desc">Send invites to an entire email list</span>
+			<span class="option-desc">Post an open invitation on your facebook timeline</span>
 		</a>
 	</li>
 	<li class="share-on-h " data-share="twitter">
 		<a href="javascript: void(0);">
 			<div class="icon social-twitter"></div>
 			<span class="option-title">Twitter</span>
-			<span class="option-desc">Send invites to an entire email list</span>
+			<span class="option-desc">Tweet an open invitation</span>
 		</a>
 	</li>
 	<li class="share-on-h" data-share="gplus">
 		<a href="javascript: void(0);" >
 			<div class="icon social-gplus"></div>
 			<span class="option-title">Gooogle +</span>
-			<span class="option-desc">Send invites to an entire email list</span>
+			<span class="option-desc">Post an open invitation on google+.  Then post on facebook.</span>
 		</a>
 	</li>
 	<li class="share-on-h" data-share="tumbler">
 		<a href="javascript: void(0);">
 			<div class="icon social-tumbler"></div>
 			<span class="option-title">Tumblr</span>
-			<span class="option-desc">Send invites to an entire email list</span>
+			<span class="option-desc">Create a tumbr blog post with an image and open invitation</span>
 		</a>
 	</li>
 </ul>
