build with mobile stuff started

--- a/html_build/pages/team/templates/menu.html
+++ b/html_build/pages/team/templates/menu.html
@@ -1,9 +1,7 @@
 <div id="sports-info">
-	<div class="team-selector-labels">
-		<div class="sports-label">Sport</div>
-		<div class="levels-label">Level</div>
-		<div class="seasons-label">Season</div>
-	</div>
+
+	<h4>Select a team</h4>
+
 	<div class="sports-h drop-down-main-outer"></div>
 	<div class="season-h drop-down-main-outer"></div>
 	<div class="team-h drop-down-main-outer"></div>
