--- a/html_build/packages/game-schedules/templates/schedule-item.html
+++ b/html_build/packages/game-schedules/templates/schedule-item.html
@@ -3,7 +3,7 @@
 	{{#teams}}
 		<div class="org-name">
 			<a href="/#!team/{{team_id}}"><span class="team-label">{{org_name}} | {{complevel}} | {{season}} {{year}}</span></a>
-			<a href="javascript: void(0);" data-team-id="{{team_id}}" data-sport-id="0" title="add game" class="add-game-h right-with-icon">Add Game</a>
+			<a href="javascript: void(0);" data-team-id="{{team_id}}" data-sport-id="0" title="add game" class="add-game-h desktop-link right-with-icon">Add Game</a>
 			<!--<a href="javascript: void(0);" data-sport-id="0" title="add team" class="add-event-h">Click here to Add Event.</a>-->
 		</div>
 			<div class="game-box-outer">
@@ -21,6 +21,10 @@
 				{{/schedules}}
 			</ul>
 		</div>
+		
+		<a href="javascript: void(0);" title="show older" class="show-older mobile-link show-older-h"></a>
+		<a href="javascript: void(0);" data-team-id="{{team_id}}" data-sport-id="0" title="add game" class="add-game-h mobile-link right-with-icon"></a>
+		
 	{{/teams}}
 	</div>
 {{/payload}}
