--- a/html_build/pages/game/templates/header.html
+++ b/html_build/pages/game/templates/header.html
@@ -3,7 +3,7 @@
 
 	<div class="game-heading">
 		<!--div class="sports-h"></div-->
-		<a href="javascript: void(0);" class="game-edit-btn-h pull-right">Edit Event</a>
+		<a href="javascript: void(0);" class="game-edit-btn-h desktop-link pull-right">Edit Event</a>
 		<div class="game-general">
 			<!--<div class="stretch"></div>-->
 			{{#shared}}
@@ -19,6 +19,10 @@
 			{{game_day}} {{game_time}} - {{game_location}}
 		</p>
 		{{^shared}}<!--a href="javascript: void(0);" class="add-to-event common-btn common-default-sky-dark pull-right" title="Add me to this Event">Add me to this Event</a-->{{/shared}}
+
+
+		<a href="javascript: void(0);" class="game-edit-btn-h mobile-link pull-right">Edit</a>
+
 
 	</div>
 
