--- a/html_build/pages/home/templates/layout.html
+++ b/html_build/pages/home/templates/layout.html
@@ -1,11 +1,11 @@
-<div class="template-container">
+<div class="template-container home-template">
 	<div id="main-header"></div>
 	<div id="main-content" class="row-fluid">
-		<div class="green-left-heading">
+		<div class="green-left-heading desktop-link">
 			Top Rated Profiles
 		</div>
 		<div id="top-rated" class="p-l-20 clearfix clear"></div>
-		<div class="green-left-heading">
+		<div class="green-left-heading desktop-link">
 			Find Content
 		</div>
 		<div id="menu" class="p-l-20 clear"></div>
