changes to landing page for mobile.

--- a/html/usercontrols/landing/templates/landing.html
+++ b/html/usercontrols/landing/templates/landing.html
@@ -1,13 +1,7 @@
-<div style="margin: auto; text-align: center; height: 30px;"> </div><div id="landing-info">
-	<div id="landing-header"><!--<img src="http://cdn.athletez.com/resources/img/a_logo_smaller.png" style="width:50px; float: left;" />-->
-		{{headline}}
-		<hr />
-	</div>
+<div class="landing-spacer"></div><div id="landing-info">
+	<div id="landing-header">{{headline}}</div>
 	<div id="site-info">
 		{{text}}
-	
-
-		<hr />
 	</div>
 </div>
 <div id="reg-landing"></div>
