--- a/html/css/app.css
+++ b/html/css/app.css
@@ -3033,4 +3033,8 @@ li.sport .teamlist-header, .stat-val-outer {
 		background-size: cover !important;
 	}
 	
+	.home-page-heading {
+		font-weight: normal;
+	}
+	
 }
