--- a/html/css/app.css
+++ b/html/css/app.css
@@ -2531,8 +2531,8 @@ li.sport .teamlist-header, .stat-val-outer {
 	}
 
 	#image-wrap div.image-item-container > img {
-		min-width: 146px;
-		min-height: 220px;
+		min-width: 100%;
+		min-height: 100%;
 	}
 
 	#image-wrap .circle {
@@ -2595,6 +2595,7 @@ li.sport .teamlist-header, .stat-val-outer {
 		border: none;
 		float: right;
 		width: 84%;
+		max-width: 100% !important;
 	}
 	
 	#schedule-list .select-team {
@@ -2632,8 +2633,8 @@ li.sport .teamlist-header, .stat-val-outer {
 	}
 
 	#fans-div div.image-item-container > img {
-		min-width: 146px;
-		min-height: 220px;
+		min-width: 100%;
+		min-height: 100%;
 	}
 
 	#fans-div .circle {
@@ -3035,6 +3036,35 @@ li.sport .teamlist-header, .stat-val-outer {
 	
 	.home-page-heading {
 		font-weight: normal;
+	}
+	
+	#fans-div .add-icon-large {
+		background-image: url(images/icons/add-icons-large.png);
+		background-repeat: no-repeat;
+		display: inline-block;
+		width: 110px;
+		height: 61px;
+	}
+	
+	#fans-div .btn1, #fans-div .btn2 {
+		margin-top: 15px;
+	}
+	
+	#fans-div .btn1 {
+		background-position: -6px -231px;
+	}
+	
+	#fans-div .btn2 {
+		background-position: -137px 0;
+	}
+	
+	#fans-div .add-big-list-container .border-wrapper {
+		min-height: 306px;
+	}
+	
+	#games_div .game-box-outer {
+		float: left;
+		width: 100%;
 	}
 	
 }
